Fix modal container z-index

--- a/src/react-components/layout/RoomLayout.scss
+++ b/src/react-components/layout/RoomLayout.scss
@@ -58,7 +58,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 10;
 
   & > * {
     pointer-events: auto;
